remove sobre nosotros section

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,6 @@
         <ul>
           <li><a href="/api/authenticated">Inicio</a> </li>
           <li><a href="">Contacto</a></li>
-          <li><a href="">Quienes Somos?</a></li>
         </ul>
       </nav>
       <div class="line"></div>
@@ -70,8 +69,8 @@
 
         <h1 class="titulo">Cursos Videos Online</h1>
         <p class="texto-principal">
-          Hola ! Me presento soy Lichy soy pofecional hace 15 años ,a lo largo de esta profesión entendí que uno nunca deja de aprender,por que todo los días se renuevan las tendencias  
-Hoy los invito a que puedan disfrutar de esta experiencia nueva ,el saber no ocupa lugar y mientas más conocimiento tengamos ,más fácil cera ofrecer nuestro servicio!
+          Hola!! Me presento soy Lichy; pofesional hace 15 años. <br> A lo largo de esta profesión entendí que uno nunca deja de aprender, por que todo los días se renuevan las tendencias.  
+Hoy los invito a que puedan disfrutar de esta experiencia nueva.<br> El saber no ocupa lugar y mientas más conocimiento tengamos, más fácil sera ofrecer nuestro servicio!
         </p>
       </div>
 
@@ -111,10 +110,8 @@ Hoy los invito a que puedan disfrutar de esta experiencia nueva ,el saber no ocu
   
         <h1 class="titulo">Cursos Videos Online</h1>
         <p class="texto-principal">
-          Cursos Videos Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-          adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+          Hola!! Me presento soy Lichy; pofesional hace 15 años. <br> A lo largo de esta profesión entendí que uno nunca deja de aprender, por que todo los días se renuevan las tendencias.  
+Hoy los invito a que puedan disfrutar de esta experiencia nueva.<br> El saber no ocupa lugar y mientas más conocimiento tengamos, más fácil sera ofrecer nuestro servicio!
         </p>
       </div>
   
