--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,14 +12,13 @@
   <title>Document</title>
 </head>
 
-<body>
+<body class="mis_cursos_body">
   <div>
     <header>
       <nav class="nav">
         <ul>
           <li><a href="">Inicio</a></li>
           <li><a href="">Contacto</a></li>
-          <li><a href="">Quienes Somos?</a></li>
           <li><a href="/misCursos">Mis Cursos</a></li>
         </ul>
       </nav>
