--- a/views/styles/_variables.scss
+++ b/views/styles/_variables.scss
@@ -4,6 +4,6 @@ $primary-text-color: #8b8b8b,;
 $secondaty-text-color:#9040C1;
 $input-text-color: black;
 $primary-font-style:'Montserrat';
-$secondary-color-gradient:linear-gradient(308deg, rgba(144,64,193,1) 22%, rgba(248,76,240,1) 100%);
-$primary-color-gradient: linear-gradient(312deg, rgba(255,203,219,1) 0%, rgba(250,102,145,1) 100%);
+$secondary-color-gradient:linear-gradient(308deg, #9040c1 22%, #f84cf0 100%);
+$primary-color-gradient: linear-gradient(312deg, #ffcbdb 0%, #fa6691 100%);
 $golden-color-gradiant:linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
