--- a/views/styles/_admin.scss
+++ b/views/styles/_admin.scss
@@ -1,3 +1,4 @@
+
 .form-nuevo-curso{
     div{
 
@@ -25,9 +26,32 @@
 }
 
 #cursos{
+    display: flex;
     .curso{
+
+        margin: 20px;
         li{
             list-style: none;
+
+            &.descripcion-listas-cursos{
+                margin: 5px 0;
+            }
+
         }
+        & button{
+            margin: 5px 0;
+        }
+        
     }
+    .thumbnail-listas-cursos{
+        aspect-ratio: 16/9;
+    max-width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+    }
+
 }
+
+
+
+
