fix frontend issues - nav - background

--- a/views/styles/_misCursos.scss
+++ b/views/styles/_misCursos.scss
@@ -1,6 +1,6 @@
 .mis_cursos_body{
 
-    background: $primary-color-gradient;
+    background-image: url('../bg.jpg');
     background-size: cover;
 
 }
