--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,13 +74,12 @@
       
       <div class="texto">
         <div class="contenido-imagenes">
-          <img src="./assets/balayajeCompleto_Moment.jpg" alt="">
-          <img src="./assets/balayajeCompleto_Moment.jpg" alt="">
+          <img src="./logo.png" alt="">
 
         </div>
 
 
-        <h1 class="titulo">Cursos Videos Online</h1>
+        <h1 class="titulo">Lichy Dessa Hair Studio</h1>
         <p class="texto-principal">
           Hola!! Me presento soy Lichy; pofesional hace 15 años. <br> A lo largo de esta profesión entendí que uno nunca deja de aprender, por que todo los días se renuevan las tendencias.  
 Hoy los invito a que puedan disfrutar de esta experiencia nueva.<br> El saber no ocupa lugar y mientas más conocimiento tengamos, más fácil sera ofrecer nuestro servicio!
