--- a/views/misCursos.ejs
+++ b/views/misCursos.ejs
@@ -10,9 +10,9 @@
     <header>
       <nav class="nav">
         <ul>
-          <li><a href="/api/authenticated">Inicio</a></li>
-          <li><a href="">Contacto</a></li>
-          <li><a href="">Mis Cursos</a></li>
+          <li><a href="/">Inicio</a></li>
+          <li><a href="/contacto">Contacto</a></li>
+          <li><a href="/misCursos">Mis Cursos</a></li>
         </ul>
       </nav>
       <div class="line"></div>
