--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,8 +10,8 @@
     <header>
       <nav class="nav">
         <ul>
-          <li><a href="">Inicio</a></li>
-          <li><a href="">Contacto</a></li>
+          <li><a href="/">Inicio</a></li>
+          <li><a href="/contacto">Contacto</a></li>
           <li><a href="/misCursos">Mis Cursos</a></li>
         </ul>
       </nav>
