--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include('partials/head.ejs') %>
+    <%- include('partials/_head.ejs') %>
   </head>
 
   <body>
