--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -20,7 +20,7 @@
 
         <main class="contacto">
 
-            <form class="formulario" action="">
+            <form class="formulario" action="https://formsubmit.co/corvattafranco@gmail.com " method="POST">
 
                 <input type="text" name="nombre" id="nombre" placeholder="Nombre">
                 <div class="line2"></div>
