--- a/views/styles/_contacto.scss
+++ b/views/styles/_contacto.scss
@@ -8,32 +8,36 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-
+    
     .formulario {
       flex-direction: column;
       display: flex;
       flex-wrap: wrap;
       width:  50%;
-    //   input:-webkit-autofill,
-    //   input:-webkit-autofill:hover,
-    //   input:-webkit-autofill:focus,
-    //   textarea:-webkit-autofill,
-    //   textarea:-webkit-autofill:hover,
-    //   textarea:-webkit-autofill:focus,
-    //   select:-webkit-autofill,
-    //   select:-webkit-autofill:hover,
-    //   select:-webkit-autofill:focus {
-    //     background: transparent;
-    //     border: 1px solid transparent;
-    //     -webkit-text-fill-color: black;
-    //     transition: background-color 5000000000s ease-in-out 0s;
-    //     font-family: $primary-font-style;
+      input:-webkit-autofill,
+      input:-webkit-autofill:hover,
+      input:-webkit-autofill:focus,
+      textarea:-webkit-autofill,
+      textarea:-webkit-autofill:hover,
+      textarea:-webkit-autofill:focus,
+      select:-webkit-autofill,
+      select:-webkit-autofill:hover,
+      select:-webkit-autofill:focus {
+        background: transparent;
+        border: 1px solid transparent;
+        -webkit-text-fill-color: black;
+        transition: background-color 5000000000s ease-in-out 0s;
+        font-family: $primary-font-style;
       }
-
-      .formulario{
-
-          input,
-          textarea {
+    }
+    
+    .formulario{
+      background-color: rgba($color: #ffffff, $alpha: 0.5);
+      filter: blur(4px);
+      
+      input,
+      textarea {
+        z-index: 5;
             font-size: large;
             font-family: $primary-font-style;
             padding: 5px;
