fix streaming on safari

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -17,6 +17,10 @@
       </header>
     </div>
 
+
+<video id="videoPlayer" width="50%" controls muted="muted" poster="/assets/1.jpg" oncontextmenu="return false;" controlsList="nodownload">
+              <source src="./Mercedes Glk - 1406.mp4" type="video/mp4" />
+            </video>
     <h2 class="titulo">Crear curso Nuevo</h2>
 
     <form
