--- a/views/styles/_profile.scss
+++ b/views/styles/_profile.scss
@@ -132,3 +132,14 @@
 .duracion-curso{
   font-size: .8rem;
 }
+
+a {
+display: flex;
+align-items: center;
+justify-content: center;
+svg{
+  display: block;
+  width: 20px;
+  
+}
+}
