--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,10 +81,10 @@
 
         <h1 class="titulo">Lichy Dessa Hair Studio</h1>
         <p class="texto-principal">
-          Hola!! Me presento soy Lichy; pofesional hace 15 años. <br> A lo largo de esta profesión entendí que uno nunca
+          Hola!! Me presento soy Lichy; profesional hace 15 años. <br> A lo largo de esta profesión entendí que uno nunca
           deja de aprender, por que todo los días se renuevan las tendencias.
-          Hoy los invito a que puedan disfrutar de esta experiencia nueva.<br> El saber no ocupa lugar y mientas más
-          conocimiento tengamos, más fácil sera ofrecer nuestro servicio!
+          Hoy los invito a que puedan disfrutar de esta experiencia nueva.<br> El saber no ocupa lugar y mientras más
+          conocimientos tengamos, más fácil será ofrecer nuestros servicios!
         </p>
       </div>
 
@@ -125,10 +125,10 @@
 
         <h1 class="titulo">Lichy Dessa Hair Studio</h1>
         <p class="texto-principal">
-          Hola!! Me presento soy Lichy; pofesional hace 15 años. <br> A lo largo de esta profesión entendí que uno nunca
+          Hola!! Me presento soy Lichy; profesional hace 15 años. <br> A lo largo de esta profesión entendí que uno nunca
           deja de aprender, por que todo los días se renuevan las tendencias.
-          Hoy los invito a que puedan disfrutar de esta experiencia nueva.<br> El saber no ocupa lugar y mientas más
-          conocimiento tengamos, más fácil sera ofrecer nuestro servicio!
+          Hoy los invito a que puedan disfrutar de esta experiencia nueva.<br> El saber no ocupa lugar y mientras más
+          conocimiento tengamos, más fácil será ofrecer nuestros servicios!
         </p>
       </div>
 
