--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -34,7 +34,7 @@
 
         <main class="contacto">
 
-            <form class="formulario" action="https://formsubmit.co/martinmelcon12@hotmail.com" method="POST">
+            <form class="formulario" action="https://formsubmit.co/corvattafranco@gmail.com" method="POST">
 
 
                     <input type="text" name="nombre" id="nombre" placeholder="Nombre">
