--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -33,8 +33,7 @@
     </div>
 
         <main class="contacto">
-
-            <form class="formulario" action="https://formsubmit.co/corvattafranco@gmail.com" method="POST">
+<form class="formulario" action="https://formsubmit.co/jamirobruno@gmail.com" method="POST">
 
 
                     <input type="text" name="nombre" id="nombre" placeholder="Nombre">
@@ -44,11 +43,13 @@
                     <div class="line2"></div>
     
                     <textarea name="mensaje" id="mensaje" cols="10" rows="5" placeholder="Mensaje"></textarea>
-
+                    <input type="hidden" name="_next" value="https://www.lichydessa.com/profile">
+                    <input type="hidden" name="_captcha" value="false">
 
                 <button class="btnMensaje" type="submit">Enviar</button>
 
             </form>
+            
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3110.1349148781796!2d-62.267262048867956!3d-38.783541379488334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95edbd550c36ecc3%3A0x5385d1a6e0a9cf07!2sAv.%20Gral.%20San%20Mart%C3%ADn%203686%2C%20Bah%C3%ADa%20Blanca%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1668090610956!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </main>
 
