--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -33,7 +33,7 @@
     </div>
 
         <main class="contacto">
-<form class="formulario" action="https://formsubmit.co/jamirobruno@gmail.com" method="POST">
+<form class="formulario" action="https://formsubmit.co/martinmelcon12@hotmail.com" method="POST">
 
 
                     <input type="text" name="nombre" id="nombre" placeholder="Nombre">
