fix logout sessionId

--- a/views/misCursos.ejs
+++ b/views/misCursos.ejs
@@ -10,11 +10,11 @@
     <header>
       <nav class="nav">
         <ul>
-          <% if (globslUserId) { %>
+          <% if (golbalUserId) { %>
            
             <li><a href="/profile">Inicio</a></li>
           <% } %>
-          <% if (!globslUserId) { %>
+          <% if (!golbalUserId) { %>
             <li><a href="/">Inicio</a></li>
           <% } %>
           <li><a href="/misCursos">Mis Cursos</a></li>
