--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
       <nav class="nav">
         <ul>
           <li><a href="/">Inicio</a> </li>
-          <% if (globslUserId) { %>
+          <% if (golbalUserId) { %>
             <li><a href="/misCursos">Mis Cursos</a></li>
             <% } %>
               <li><a href="/contacto">Contacto</a></li>
